:bug: Fixed the issue where the text might become black after selection
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/src/components/Layout/AppStyle.less
+++ b/src/components/Layout/AppStyle.less
@@ -15,4 +15,7 @@
       text-align: left;
     }
   }
+  /deep/ .v-autocomplete:not(.v-input--is-disabled).v-select.v-text-field input {
+    color: white;
+  }
 }
