:art: Compatible with safari
Signed-off-by: Ayaka Neko <neko@ayaka.moe>

--- a/src/components/Layout/Space.css
+++ b/src/components/Layout/Space.css
@@ -114,7 +114,7 @@
   border-radius: 100%/100%;
   background: #FF92BC;
   filter: blur(30px);
-  -webkit-filter: blur(200px);
+  -webkit-filter: blur(30px);
   opacity: 0.7;
   top: -10%;
 }
@@ -159,7 +159,7 @@
 
 a {
   text-decoration: none;
-  color: #E56D9B;
+  color: #E56D9B !important;
 }
 
 @keyframes fadeInOpacity {
